--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@vercel/blob": "^0.26.0",
+    "axios": "^1.8.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
